Fix(bivariate-layer-manager): Collapse the selector panel but keep the legend on the map
Closes #3783

--- a/k2-packages/ui-kit/src/AxisControl/cell.module.css
+++ b/k2-packages/ui-kit/src/AxisControl/cell.module.css
@@ -9,11 +9,11 @@
   cursor: pointer;
   width: var(--cell-side);
   height: var(--cell-side);
-  border: 1px solid transparent;
+  border: 1px dashed #eee;
 }
 
 .valueCell:hover {
-  box-shadow: 0px 0px 0px 2px #000 inset;
+  background: #e5e5e5;
 }
 
 .valueFill {
@@ -29,7 +29,7 @@
 
 .disabled {
   cursor: default;
-  /* background-color: hsla(0, 0%, 0%, 0.03); */
+  background-color: #f9f9f9;
 }
 
 .disabled:hover {
