--- a/k2-packages/ui-kit/src/AxisControl/style.module.css
+++ b/k2-packages/ui-kit/src/AxisControl/style.module.css
@@ -38,3 +38,7 @@
 .selectedRow.last {
   border-left: var(--selection-border-style) !important;
 }
+
+.selectedCol.selectedRow {
+  background: #ddd !important;
+}
