--- a/k2-packages/ui-kit/src/Selector/style.module.css
+++ b/k2-packages/ui-kit/src/Selector/style.module.css
@@ -3,7 +3,5 @@
 }
 
 .shade {
-  box-shadow: var(--shadow-2);
-  border-radius: var(--border-radius);
   border: var(--input-border);
 }
